finished this project. GRADE IT NOW

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="page-load">
       <h1>Star Wars DMV</h1>
+      <h2>The best registrations in the Galaxy!</h2>
       <form class="user-entry" action="index.html" method="post">
         Enter a Vehicle <br>
         <input type="text" name="vehicle">
